# action-search-eval

./: .gitignore  README.md  RESULTS.md  baseline.py  config.py  diagnose.py  evaluate.py  pyproject.toml  requirements.txt  server.py
data/: actions.json  train.jsonl
data/days/: day_01.jsonl  day_02.jsonl  day_03.jsonl  day_04.jsonl  day_05.jsonl  day_06.jsonl  day_07.jsonl  day_08.jsonl  day_09.jsonl  day_10.jsonl
models/: _eval.py  predictor.py  v1_knn.py  v2_prior.py  v3_rerank.py  v3b_rerank_train.py  v4_hybrid.py  v6_finetuned.py  v8_ensemble.py
scripts/: diagnose.py  finetune.py  validate.py
tests/: test_eval.py  test_predictor.py
