[project]
name = "action-search-eval"
version = "0.1.0"
description = "Evaluation framework for matching natural language queries to connector actions"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.5",
    "flask>=3.1.3",
    "numpy>=2.4.4",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.4.1",
    "torch>=2.11.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
